<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:add="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addData.AddDataFragment"
    android:background="@color/blue_200">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="#CEE4FF"
            add:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_data"
                    android:textColor="@color/dark_blue_900"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <!-- ID TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/addId"
                            style="@style/CustomTextInputLayoutStyle"
                            android:hint="@string/id"
                            add:errorEnabled="true"
                            add:counterEnabled="true"
                            add:counterMaxLength="6">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Name TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add_name"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_marginTop="10dp"
                            android:hint="@string/name"
                            add:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Sci TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/sci"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_marginTop="10dp"
                            android:hint="@string/sci"
                            add:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Title TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add_description"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_marginTop="10dp"
                            android:hint="@string/description"
                            add:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Aliment TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/aliment"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_marginTop="10dp"
                            android:hint="@string/aliment"
                            add:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- URL Image TextField -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add_urlImg"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_marginTop="10dp"
                            android:hint="@string/url"
                            add:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.example.cactus.component.CustomButton
            android:id="@+id/btnAdd"
            android:text="@string/save"
            style="@style/CustomButtonStyle"/>

        <com.example.cactus.component.CustomButtonOutline
            android:id="@+id/btnBack"
            android:text="BACK"
            style="@style/CustomButtonStyle"/>

    </LinearLayout>

</ScrollView>

</FrameLayout>